syntax = "proto3";

option go_package = "github.com/wldyd423/keyvaluestorev1/pb";

package keyvaluestore;

service Storage{
    rpc SayHello(HelloRequest) returns (HelloResponse);
    rpc SayGoodbye(GoodbyeRequest) returns (GoodbyeResponse);
    rpc Get(Key) returns (Value);
    rpc Set(KeyValuePair) returns (Value);
    rpc Delete(Key) returns (Value);
    rpc GetAll(Empty) returns (KeyValuePairList);
    rpc Heartbeat(KeyValuePairList) returns (Empty);
    rpc Election(RequestforVote) returns (Vote);
}

message RequestforVote{
    int32 candidatePort = 1;
}

message Vote{
    bool voteGranted = 1;
}

message Empty{}

message KeyValuePairList{
    repeated KeyValuePair keyValuePair = 1;
}

message KeyValuePair{
    string key = 1;
    string value = 2;
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message GoodbyeRequest{
    string name = 1;
}

message GoodbyeResponse{
    string message = 1;
}

message Key{
    string key = 1;
}

message Value{
    string value = 1;
}
